--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="fr">
     <head>
         <meta charset="utf-8" />
@@ -11,7 +11,11 @@
     </head>
 
     <body>
-
+        <div class="coucou">
+            <div class= "coucou__titre">
+                Coucou
+            </div>
+        </div>
         <script src="https://kit.fontawesome.com/0e4dff364e.js" crossorigin="anonymous"></script>
     </body>
 </html>
