Environnement de travail + Header + présentation

--- a/index.html
+++ b/index.html
@@ -5,17 +5,34 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         
         <link rel="stylesheet" href="CSS/style.css" />
+        <link rel="stylesheet" href="CSS/normalize.css" />
         
 
-        <title></title>
+        <title>ohmyfood</title>
     </head>
 
     <body>
-        <div class="coucou">
-            <div class= "coucou__titre">
-                Coucou
+        <header>
+            <div class="logo">
+                <h1>ohmyfood</h1>
             </div>
+        </header>
+
+        <div class="localisation">
+            <i class="fa-solid fa-location-dot"></i>
+            <p>Paris, Belleville</p>
         </div>
+
+        <div class="presentation">
+            <div class="presentation presentation__line1">Réservez le menu qui vous convient</div>
+            <div class="presentation presentation__line2">Découvrez des restaurants d'exception, séléctionnés par nos soins.</div>
+            <div class="presentation presentation__line3 btn">Explorer nos restaurants</div>
+        </div>
+
+        <div class="fonction">
+            <div class="fonction__titre">Fonctionnement</div>
+        </div>
+
         <script src="https://kit.fontawesome.com/0e4dff364e.js" crossorigin="anonymous"></script>
     </body>
 </html>
