--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
         
-        <link rel="stylesheet" href="CSS/style.css" />
         <link rel="stylesheet" href="CSS/normalize.css" />
+        <link rel="stylesheet" href="CSS/style.css" />
         
 
         <title>ohmyfood</title>
@@ -31,7 +31,128 @@
 
         <div class="fonction">
             <div class="fonction__titre">Fonctionnement</div>
+            <div class="fonction__line">
+                <div class="fonction__line__position">
+                    <div class="fonction__line__position__number">
+                        <p>1</p>
+                    </div>
+                </div>
+                <div class="fonction__line__icon">
+                    <i class="fa-solid fa-mobile-screen-button"></i>
+                </div>
+                <p>Choisissez un restaurant</p>
+            </div>
+            <div class="fonction__line">
+                <div class="fonction__line__position">
+                    <div class="fonction__line__position__number">
+                        <p>2</p>
+                    </div>
+                </div>
+                <div class="fonction__line__icon">
+                    <i class="fa-solid fa-list-ul"></i>
+                </div>
+                <p>Composez votre menu</p>
+            </div>
+            <div class="fonction__line fonction__line--active">
+                <div class="fonction__line__position">
+                    <div class="fonction__line__position__number">
+                        <p>3</p>
+                    </div>
+                </div>
+                <div class="fonction__line__icon">
+                    <i class="fa-solid fa-store"></i>
+                </div>
+                <p>Dégustez au restaurant</p>
+            </div>
         </div>
+
+        <div class="restaurants">
+            <div class="restaurants__titre">Restaurants</div>
+            <div class="restaurants__list">
+                <div class="restaurants__list__cards">
+                    <div class="restaurants__list__cards__img">
+
+                    </div>
+                    <div class="restaurants__list__description">
+                        <div class="restaurants__list__cards__description__txt">
+                            <div class="restaurants__list__cards__description__txt__line1">La palette du goût</div>
+                            <div class="restaurants__list__cards__description__txt__line2">Ménilmontant</div>
+                        </div>
+                        <div class="restaurants__list__cards__description__heart">
+                            <i class="fa-regular fa-heart"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="restaurants__list__cards">
+                    <div class="restaurants__list__cards__img">
+
+                    </div>
+                    <div class="restaurants__list__cards__description">
+                        <div class="restaurants__list__cards__description__txt">
+                            <div class="restaurants__list__cards__description__txt__line1">La note enchantée</div>
+                            <div class="restaurants__list__cards__description__txt__line2">Charonne</div>
+                        </div>
+                        <div class="restaurants__list__cards__description__heart">
+                            <i class="fa-regular fa-heart"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="restaurants__list__cards">
+                    <div class="restaurants__list__cards__img">
+
+                    </div>
+                    <div class="restaurants__list__cards__description">
+                        <div class="restaurants__list__cards__description__txt">
+                            <div class="restaurants__list__cards__description__txt__line1">À la française</div>
+                            <div class="restaurants__list__cards__description__txt__line2">Cité Rouge</div>
+                        </div>
+                        <div class="restaurants__list__cards__description__heart">
+                            <i class="fa-regular fa-heart"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="restaurants__list__cards">
+                    <div class="restaurants__list__cards__img">
+
+                    </div>
+                    <div class="restaurants__list__cards__description">
+                        <div class="restaurants__list__cards__description__txt">
+                            <div class="restaurants__list__cards__description__txt__line1">Le délice des sens</div>
+                            <div class="restaurants__list__cards__description__txt__line2">Folie-Méricourt</div>
+                        </div>
+                        <div class="restaurants__list__cards__description__heart">
+                            <i class="fa-regular fa-heart"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+
+
+
+
+        <footer class="footer">
+            <div class="footer__logo">
+                ohmyfood
+            </div>
+            <ul class="footer__puces">
+                <li class="footer__puces__list footer__puces__list--double">
+                    <div class="footer__puces__list__icon">
+                        <i class="fa-solid fa-utensils"></i>
+                    </div>
+                    Proposer un restaurant</li>
+                <li class="footer__puces__list footer__puces__list--double">
+                    <div class="footer__puces__list__icon">
+                        <i class="fa-solid fa-handshake-angle"></i>
+                    </div>
+                    Devenir partenaire</li>
+                <li class="footer__puces__list">Mentions légales</li>
+                <li class="footer__puces__list">Contact</li>
+            </ul>
+        </footer>
 
         <script src="https://kit.fontawesome.com/0e4dff364e.js" crossorigin="anonymous"></script>
     </body>
