Section fonction + pied de page + début restaurants + sémantique

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             <div class="presentation presentation__line3 btn">Explorer nos restaurants</div>
         </div>
 
-        <div class="fonction">
-            <div class="fonction__titre">Fonctionnement</div>
+        <section class="fonction">
+            <h2>Fonctionnement</h2>
             <div class="fonction__line">
                 <div class="fonction__line__position">
                     <div class="fonction__line__position__number">
@@ -64,10 +64,10 @@
                 </div>
                 <p>Dégustez au restaurant</p>
             </div>
-        </div>
+        </section>
 
-        <div class="restaurants">
-            <div class="restaurants__titre">Restaurants</div>
+        <section class="restaurants">
+            <h2>Restaurants</h2>
             <div class="restaurants__list">
                 <div class="restaurants__list__cards">
                     <div class="restaurants__list__cards__img">
@@ -126,7 +126,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
 
 
 
