--- a/index.html
+++ b/index.html
@@ -30,100 +30,108 @@
         </div>
 
         <section class="fonction">
-            <h2>Fonctionnement</h2>
-            <div class="fonction__line">
-                <div class="fonction__line__position">
-                    <div class="fonction__line__position__number">
-                        <p>1</p>
+            <div class="container">
+                <h2>Fonctionnement</h2>
+                <div class="fonction__block">
+                    <div class="fonction__block__line">
+                        <div class="fonction__block__line__position">
+                            <div class="fonction__block__line__position__number">
+                                <p>1</p>
+                            </div>
+                        </div>
+                        <div class="fonction__block__line__icon">
+                            <i class="fa-solid fa-mobile-screen-button"></i>
+                        </div>
+                        <p>Choisissez un restaurant</p>
+                    </div>
+                    <div class="fonction__block__line">
+                        <div class="fonction__block__line__position">
+                            <div class="fonction__block__line__position__number">
+                                <p>2</p>
+                            </div>
+                        </div>
+                        <div class="fonction__block__line__icon">
+                            <i class="fa-solid fa-list-ul"></i>
+                        </div>
+                        <p>Composez votre menu</p>
+                    </div>
+                    <div class="fonction__block__line fonction__block__line--active">
+                        <div class="fonction__block__line__position">
+                            <div class="fonction__block__line__position__number">
+                                <p>3</p>
+                            </div>
+                        </div>
+                        <div class="fonction__block__line__icon">
+                            <i class="fa-solid fa-store"></i>
+                        </div>
+                        <p>Dégustez au restaurant</p>
                     </div>
                 </div>
-                <div class="fonction__line__icon">
-                    <i class="fa-solid fa-mobile-screen-button"></i>
-                </div>
-                <p>Choisissez un restaurant</p>
-            </div>
-            <div class="fonction__line">
-                <div class="fonction__line__position">
-                    <div class="fonction__line__position__number">
-                        <p>2</p>
-                    </div>
-                </div>
-                <div class="fonction__line__icon">
-                    <i class="fa-solid fa-list-ul"></i>
-                </div>
-                <p>Composez votre menu</p>
-            </div>
-            <div class="fonction__line fonction__line--active">
-                <div class="fonction__line__position">
-                    <div class="fonction__line__position__number">
-                        <p>3</p>
-                    </div>
-                </div>
-                <div class="fonction__line__icon">
-                    <i class="fa-solid fa-store"></i>
-                </div>
-                <p>Dégustez au restaurant</p>
             </div>
         </section>
 
         <section class="restaurants">
-            <h2>Restaurants</h2>
-            <div class="restaurants__list">
-                <div class="restaurants__list__cards">
-                    <div class="restaurants__list__cards__img">
-
-                    </div>
-                    <div class="restaurants__list__description">
-                        <div class="restaurants__list__cards__description__txt">
-                            <div class="restaurants__list__cards__description__txt__line1">La palette du goût</div>
-                            <div class="restaurants__list__cards__description__txt__line2">Ménilmontant</div>
+            <div class="container">
+                <h2>Restaurants</h2>
+                <div class="restaurants__list">
+                    <a href="#" class="restaurants__list__link">
+                        <div class="restaurants__list__cards">
+                            <img class="restaurants__list__cards__img" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
+                            <div class="restaurants__list__cards__new">
+                                Nouveau
+                            </div>
+                            <div class="restaurants__list__cards__description">
+                                <div class="restaurants__list__cards__description__txt">
+                                    <div class="restaurants__list__cards__description__txt__line1">La palette du goût</div>
+                                    <div class="restaurants__list__cards__description__txt__line">Ménilmontant</div>
+                                </div>
+                                <i class="fa-regular fa-heart fa-lg restaurants__list__cards__description__heart"></i>
+                                <i class="fa-solid fa-heart fa-lg restaurants__list__cards__description__heart restaurants__list__cards__description__heart--hover"></i>
+                            </div>
                         </div>
-                        <div class="restaurants__list__cards__description__heart">
-                            <i class="fa-regular fa-heart"></i>
+                    </a>
+                    <a href="#" class="restaurants__list__link">
+                        <div class="restaurants__list__cards">
+                            <img class="restaurants__list__cards__img restaurants__list__cards__img--rotate" src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
+                            <div class="restaurants__list__cards__new">
+                                Nouveau
+                            </div>
+                            <div class="restaurants__list__cards__description">
+                                <div class="restaurants__list__cards__description__txt">
+                                    <div class="restaurants__list__cards__description__txt__line1">La note enchantée</div>
+                                    <div class="restaurants__list__cards__description__txt__line">Charonne</div>
+                                </div>
+                                <i class="fa-regular fa-heart fa-lg restaurants__list__cards__description__heart"></i>
+                                <i class="fa-solid fa-heart fa-lg restaurants__list__cards__description__heart restaurants__list__cards__description__heart--hover"></i>
+                            </div>
                         </div>
-                    </div>
-                </div>
-                <div class="restaurants__list__cards">
-                    <div class="restaurants__list__cards__img">
-
-                    </div>
-                    <div class="restaurants__list__cards__description">
-                        <div class="restaurants__list__cards__description__txt">
-                            <div class="restaurants__list__cards__description__txt__line1">La note enchantée</div>
-                            <div class="restaurants__list__cards__description__txt__line2">Charonne</div>
+                    </a>
+                    <a href="#" class="restaurants__list__link">
+                        <div class="restaurants__list__cards">
+                            <img class="restaurants__list__cards__img" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A la française">
+                            <div class="restaurants__list__cards__description">
+                                <div class="restaurants__list__cards__description__txt">
+                                    <div class="restaurants__list__cards__description__txt__line1">À la française</div>
+                                    <div class="restaurants__list__cards__description__txt__line">Cité Rouge</div>
+                                </div>
+                                <i class="fa-regular fa-heart fa-lg restaurants__list__cards__description__heart"></i>
+                                <i class="fa-solid fa-heart fa-lg restaurants__list__cards__description__heart restaurants__list__cards__description__heart--hover"></i>
+                            </div>
                         </div>
-                        <div class="restaurants__list__cards__description__heart">
-                            <i class="fa-regular fa-heart"></i>
+                    </a>
+                    <a href="#" class="restaurants__list__link">
+                        <div class="restaurants__list__cards">
+                            <img class="restaurants__list__cards__img" src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
+                            <div class="restaurants__list__cards__description">
+                                <div class="restaurants__list__cards__description__txt">
+                                    <div class="restaurants__list__cards__description__txt__line1">Le délice des sens</div>
+                                    <div class="restaurants__list__cards__description__txt__line">Folie-Méricourt</div>
+                                </div>
+                                <i class="fa-regular fa-heart fa-lg restaurants__list__cards__description__heart"></i>
+                                <i class="fa-solid fa-heart fa-lg restaurants__list__cards__description__heart restaurants__list__cards__description__heart--hover"></i>
+                            </div>
                         </div>
-                    </div>
-                </div>
-                <div class="restaurants__list__cards">
-                    <div class="restaurants__list__cards__img">
-
-                    </div>
-                    <div class="restaurants__list__cards__description">
-                        <div class="restaurants__list__cards__description__txt">
-                            <div class="restaurants__list__cards__description__txt__line1">À la française</div>
-                            <div class="restaurants__list__cards__description__txt__line2">Cité Rouge</div>
-                        </div>
-                        <div class="restaurants__list__cards__description__heart">
-                            <i class="fa-regular fa-heart"></i>
-                        </div>
-                    </div>
-                </div>
-                <div class="restaurants__list__cards">
-                    <div class="restaurants__list__cards__img">
-
-                    </div>
-                    <div class="restaurants__list__cards__description">
-                        <div class="restaurants__list__cards__description__txt">
-                            <div class="restaurants__list__cards__description__txt__line1">Le délice des sens</div>
-                            <div class="restaurants__list__cards__description__txt__line2">Folie-Méricourt</div>
-                        </div>
-                        <div class="restaurants__list__cards__description__heart">
-                            <i class="fa-regular fa-heart"></i>
-                        </div>
-                    </div>
+                    </a>
                 </div>
             </div>
         </section>
@@ -135,23 +143,25 @@
 
 
         <footer class="footer">
-            <div class="footer__logo">
-                ohmyfood
+            <div class="container">
+                <div class="footer__logo">
+                    ohmyfood
+                </div>
+                <ul class="footer__puces">
+                    <li class="footer__puces__list">
+                        <div class="footer__puces__list__icon">
+                            <i class="fa-solid fa-utensils"></i>
+                        </div>
+                        <a href="#">Proposer un restaurant</a></li>
+                    <li class="footer__puces__list">
+                        <div class="footer__puces__list__icon">
+                            <i class="fa-solid fa-handshake-angle"></i>
+                        </div>
+                        <a href="#">Devenir partenaire</a></li>
+                    <li class="footer__puces__list"><a href="#">Mentions légales</a></li>
+                    <li class="footer__puces__list"><a href="#">Contact</a></li>
+                </ul>
             </div>
-            <ul class="footer__puces">
-                <li class="footer__puces__list footer__puces__list--double">
-                    <div class="footer__puces__list__icon">
-                        <i class="fa-solid fa-utensils"></i>
-                    </div>
-                    Proposer un restaurant</li>
-                <li class="footer__puces__list footer__puces__list--double">
-                    <div class="footer__puces__list__icon">
-                        <i class="fa-solid fa-handshake-angle"></i>
-                    </div>
-                    Devenir partenaire</li>
-                <li class="footer__puces__list">Mentions légales</li>
-                <li class="footer__puces__list">Contact</li>
-            </ul>
         </footer>
 
         <script src="https://kit.fontawesome.com/0e4dff364e.js" crossorigin="anonymous"></script>
