--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </head>
 
     <body>
-        <header>
+        <header class="header">
             <div class="logo">
                 <h1>ohmyfood</h1>
             </div>
@@ -29,7 +29,7 @@
             <div class="presentation presentation__line3 btn">Explorer nos restaurants</div>
         </div>
 
-        <section class="fonction">
+        <div class="fonction">
             <div class="container">
                 <h2>Fonctionnement</h2>
                 <div class="fonction__block">
@@ -68,13 +68,13 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </div>
 
-        <section class="restaurants">
+        <div class="restaurants">
             <div class="container">
                 <h2>Restaurants</h2>
                 <div class="restaurants__list">
-                    <a href="#" class="restaurants__list__link">
+                    <a href="CSS/Pages/page3.html" class="restaurants__list__link">
                         <div class="restaurants__list__cards">
                             <img class="restaurants__list__cards__img" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
                             <div class="restaurants__list__cards__new">
@@ -85,12 +85,18 @@
                                     <div class="restaurants__list__cards__description__txt__line1">La palette du goût</div>
                                     <div class="restaurants__list__cards__description__txt__line">Ménilmontant</div>
                                 </div>
-                                <i class="fa-regular fa-heart fa-lg restaurants__list__cards__description__heart"></i>
-                                <i class="fa-solid fa-heart fa-lg restaurants__list__cards__description__heart restaurants__list__cards__description__heart--hover"></i>
+                                <div class="container__heart">
+                                    <div class="container__heart__1">
+                                        <i class="fa-regular fa-heart fa-lg"></i>
+                                    </div>
+                                    <div class="container__heart__2">
+                                        <i class="fa-solid fa-heart fa-lg"></i>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </a>
-                    <a href="#" class="restaurants__list__link">
+                    <a href="CSS/Pages/page2.html" class="restaurants__list__link">
                         <div class="restaurants__list__cards">
                             <img class="restaurants__list__cards__img restaurants__list__cards__img--rotate" src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
                             <div class="restaurants__list__cards__new">
@@ -101,12 +107,18 @@
                                     <div class="restaurants__list__cards__description__txt__line1">La note enchantée</div>
                                     <div class="restaurants__list__cards__description__txt__line">Charonne</div>
                                 </div>
-                                <i class="fa-regular fa-heart fa-lg restaurants__list__cards__description__heart"></i>
-                                <i class="fa-solid fa-heart fa-lg restaurants__list__cards__description__heart restaurants__list__cards__description__heart--hover"></i>
+                                <div class="container__heart">
+                                    <div class="container__heart__1">
+                                        <i class="fa-regular fa-heart fa-lg"></i>
+                                    </div>
+                                    <div class="container__heart__2">
+                                        <i class="fa-solid fa-heart fa-lg"></i>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </a>
-                    <a href="#" class="restaurants__list__link">
+                    <a href="CSS/Pages/page1.html" class="restaurants__list__link">
                         <div class="restaurants__list__cards">
                             <img class="restaurants__list__cards__img" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A la française">
                             <div class="restaurants__list__cards__description">
@@ -114,12 +126,18 @@
                                     <div class="restaurants__list__cards__description__txt__line1">À la française</div>
                                     <div class="restaurants__list__cards__description__txt__line">Cité Rouge</div>
                                 </div>
-                                <i class="fa-regular fa-heart fa-lg restaurants__list__cards__description__heart"></i>
-                                <i class="fa-solid fa-heart fa-lg restaurants__list__cards__description__heart restaurants__list__cards__description__heart--hover"></i>
+                                <div class="container__heart">
+                                    <div class="container__heart__1">
+                                        <i class="fa-regular fa-heart fa-lg"></i>
+                                    </div>
+                                    <div class="container__heart__2">
+                                        <i class="fa-solid fa-heart fa-lg"></i>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </a>
-                    <a href="#" class="restaurants__list__link">
+                    <a href="CSS/Pages/page4.html" class="restaurants__list__link">
                         <div class="restaurants__list__cards">
                             <img class="restaurants__list__cards__img" src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
                             <div class="restaurants__list__cards__description">
@@ -127,14 +145,20 @@
                                     <div class="restaurants__list__cards__description__txt__line1">Le délice des sens</div>
                                     <div class="restaurants__list__cards__description__txt__line">Folie-Méricourt</div>
                                 </div>
-                                <i class="fa-regular fa-heart fa-lg restaurants__list__cards__description__heart"></i>
-                                <i class="fa-solid fa-heart fa-lg restaurants__list__cards__description__heart restaurants__list__cards__description__heart--hover"></i>
+                                <div class="container__heart">
+                                    <div class="container__heart__1">
+                                        <i class="fa-regular fa-heart fa-lg"></i>
+                                    </div>
+                                    <div class="container__heart__2">
+                                        <i class="fa-solid fa-heart fa-lg"></i>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </a>
                 </div>
             </div>
-        </section>
+        </div>
 
 
 
