--- a/CSS/Pages/page1.html
+++ b/CSS/Pages/page1.html
@@ -21,12 +21,12 @@
             </div>
         </header>
 
-        <div class="page1img">
-            <img class="page1img__img" src="../../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
+        <div class="pagesimg">
+            <img class="pagesimg__img" src="../../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
         </div>
 
-        <section class="page1menu">
-            <div class="page1menu__titre">
+        <div class="pagesmenu">
+            <div class="pagesmenu__titre">
                 <h1>À la française</h1>
                 <div class="container__heart">
                     <div class="container__heart__1">
@@ -37,14 +37,33 @@
                     </div>
                 </div>
             </div>
-            <article class="entrees">
-
+            <article class="menu">
+                <h2>ENTRÉES</h2>
+                <div class="menu__underling"></div>
+                <div class="menu__line">
+                    <div class="menu__line__txt">
+                        <div class="menu__line__txt__1">
+                            Tartare de poulpe acidulé
+                        </div>
+                        <div class="menu__line__txt__2">
+                            Aux zests d'orange
+                        </div>
+                    </div>
+                    <div class="menu__line__price">
+                        25€
+                    </div>
+                    <div class="menu__line__validation">
+                        <i class="fa-sharp fa-solid fa-circle-check fa-lg"></i>
+                    </div>
+                </div>
             </article>
-            <article class="plats">
-
+            <article class="menu">
+                <h2>PLATS</h2>
+                <div class="menu__underling"></div>
             </article>
-            <article class="desserts">
-
+            <article class="menu">
+                <h2>DESSERTS</h2>
+                <div class="menu__underling"></div>
             </article>
         </div>
 
