bouton + responsive non séparé

--- a/CSS/Pages/page1.html
+++ b/CSS/Pages/page1.html
@@ -39,7 +39,7 @@
             </div>
             <article class="menu">
                 <h2>ENTRÉES</h2>
-                <div class="menu__underling"></div>
+                <div class="menu__underline"></div>
                 <div class="menu__line">
                     <div class="menu__line__txt">
                         <div class="menu__line__txt__1">
@@ -59,13 +59,17 @@
             </article>
             <article class="menu">
                 <h2>PLATS</h2>
-                <div class="menu__underling"></div>
+                <div class="menu__underline"></div>
             </article>
             <article class="menu">
                 <h2>DESSERTS</h2>
-                <div class="menu__underling"></div>
+                <div class="menu__underline"></div>
             </article>
+            <div class="bouton">
+                <div class="btn">Commander</div>
+            </div>
         </div>
+
 
         <footer class="footer">
             <div class="container">
