--- a/CSS/Pages/page4.html
+++ b/CSS/Pages/page4.html
@@ -12,14 +12,63 @@
     </head>
 
     <body>
-        <header>
-            <i class="fa-solid fa-arrow-left fa-lg"></i>
+        <header class="header">
+            <a href="../../index.html" class="header__return">
+                <i class="fa-solid fa-arrow-left fa-lg"></i>
+            </a>
             <div class="logo">
                 <h1>ohmyfood</h1>
             </div>
         </header>
 
+        <div class="pagesimg">
+            <img class="pagesimg__img" src="../../images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="À la française">
+        </div>
 
+        <div class="pagesmenu">
+            <div class="pagesmenu__titre">
+                <h1>À la française</h1>
+                <div class="container__heart">
+                    <div class="container__heart__1">
+                        <i class="fa-regular fa-heart fa-lg"></i>
+                    </div>
+                    <div class="container__heart__2">
+                        <i class="fa-solid fa-heart fa-lg"></i>
+                    </div>
+                </div>
+            </div>
+            <article class="menu">
+                <h2>ENTRÉES</h2>
+                <div class="menu__underline"></div>
+                <div class="menu__line">
+                    <div class="menu__line__txt">
+                        <div class="menu__line__txt__1">
+                            Tartare de poulpe acidulé
+                        </div>
+                        <div class="menu__line__txt__2">
+                            Aux zests d'orange
+                        </div>
+                    </div>
+                    <div class="menu__line__price">
+                        25€
+                    </div>
+                    <div class="menu__line__validation">
+                        <i class="fa-sharp fa-solid fa-circle-check fa-lg"></i>
+                    </div>
+                </div>
+            </article>
+            <article class="menu">
+                <h2>PLATS</h2>
+                <div class="menu__underline"></div>
+            </article>
+            <article class="menu">
+                <h2>DESSERTS</h2>
+                <div class="menu__underline"></div>
+            </article>
+            <div class="bouton">
+                <div class="btn">Commander</div>
+            </div>
+        </div>
 
         <footer class="footer">
             <div class="container">
