form + hover btn

--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
         </header>
 
         <div class="localisation">
-            <i class="fa-solid fa-location-dot"></i>
-            <p>Paris, Belleville</p>
+            <i class="fa-solid fa-location-dot fa-lg localisation__icon"></i>
+            <form method="post" action="#">
+                <input type="search" name="localisation" id="Ville" placeholder="Paris, Belleville" />
+            </form>
         </div>
 
         <div class="presentation">
