--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div class="container">
                 <h2>Restaurants</h2>
                 <div class="restaurants__list">
-                    <a href="CSS/Pages/page3.html" class="restaurants__list__link">
+                    <a href="Pages/page3.html" class="restaurants__list__link">
                         <div class="restaurants__list__cards">
                             <img class="restaurants__list__cards__img" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
                             <div class="restaurants__list__cards__new">
@@ -98,7 +98,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="CSS/Pages/page2.html" class="restaurants__list__link">
+                    <a href="Pages/page2.html" class="restaurants__list__link">
                         <div class="restaurants__list__cards">
                             <img class="restaurants__list__cards__img restaurants__list__cards__img--rotate" src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
                             <div class="restaurants__list__cards__new">
@@ -120,7 +120,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="CSS/Pages/page1.html" class="restaurants__list__link">
+                    <a href="Pages/page1.html" class="restaurants__list__link">
                         <div class="restaurants__list__cards">
                             <img class="restaurants__list__cards__img" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A la française">
                             <div class="restaurants__list__cards__description">
@@ -139,7 +139,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="CSS/Pages/page4.html" class="restaurants__list__link">
+                    <a href="Pages/page4.html" class="restaurants__list__link">
                         <div class="restaurants__list__cards">
                             <img class="restaurants__list__cards__img" src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
                             <div class="restaurants__list__cards__description">
@@ -162,12 +162,6 @@
             </div>
         </div>
 
-
-
-
-
-
-
         <footer class="footer">
             <div class="container">
                 <div class="footer__logo">
@@ -185,7 +179,7 @@
                         </div>
                         <a href="#">Devenir partenaire</a></li>
                     <li class="footer__puces__list"><a href="#">Mentions légales</a></li>
-                    <li class="footer__puces__list"><a href="#">Contact</a></li>
+                    <li class="footer__puces__list"><a href="mailto: abc@example.com">Contact</a></li>
                 </ul>
             </div>
         </footer>
