--- a/Pages/page2.html
+++ b/Pages/page2.html
@@ -40,7 +40,7 @@
             <article class="menu">
                 <h2>ENTRÉES</h2>
                 <div class="menu__underline"></div>
-                <div class="menu__line">
+                <div class="menu__line menu__line--1">
                     <div class="menu__line__txt">
                         <div class="menu__line__txt__1">
                             Ravioles de foie gras
@@ -56,7 +56,7 @@
                         <i class="fa-sharp fa-solid fa-circle-check fa-lg"></i>
                     </div>
                 </div>
-                <div class="menu__line">
+                <div class="menu__line menu__line--2">
                     <div class="menu__line__txt">
                         <div class="menu__line__txt__1">
                             Caviar osciètre
@@ -72,7 +72,7 @@
                         <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
                     </div>
                 </div>
-                <div class="menu__line">
+                <div class="menu__line menu__line--3">
                     <div class="menu__line__txt">
                         <div class="menu__line__txt__1">
                             Homard et espuma de...
@@ -88,7 +88,7 @@
                         <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
                     </div>
                 </div>
-                <div class="menu__line">
+                <div class="menu__line menu__line--4">
                     <div class="menu__line__txt">
                         <div class="menu__line__txt__1">
                             Foie gras de canard cuit entier
@@ -108,7 +108,7 @@
             <article class="menu">
                 <h2>PLATS</h2>
                 <div class="menu__underline"></div>
-                <div class="menu__line">
+                <div class="menu__line menu__line--5">
                     <div class="menu__line__txt">
                         <div class="menu__line__txt__1">
                             Noix de coquilles Saint-Jacques
@@ -124,7 +124,7 @@
                         <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
                     </div>
                 </div>
-                <div class="menu__line">
+                <div class="menu__line menu__line--6">
                     <div class="menu__line__txt">
                         <div class="menu__line__txt__1">
                             Langoustine poêlée
@@ -140,7 +140,7 @@
                         <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
                     </div>
                 </div>
-                <div class="menu__line">
+                <div class="menu__line menu__line--7">
                     <div class="menu__line__txt">
                         <div class="menu__line__txt__1">
                             Mijoté de queue de boeuf
@@ -160,7 +160,7 @@
             <article class="menu">
                 <h2>DESSERTS</h2>
                 <div class="menu__underline"></div>
-                <div class="menu__line">
+                <div class="menu__line menu__line--8">
                     <div class="menu__line__txt">
                         <div class="menu__line__txt__1">
                             Macaron noisette et chocolat
@@ -176,7 +176,7 @@
                         <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
                     </div>
                 </div>
-                <div class="menu__line">
+                <div class="menu__line menu__line--9">
                     <div class="menu__line__txt">
                         <div class="menu__line__txt__1">
                             Baba au rhum revisité
@@ -192,7 +192,7 @@
                         <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
                     </div>
                 </div>
-                <div class="menu__line">
+                <div class="menu__line menu__line--10">
                     <div class="menu__line__txt">
                         <div class="menu__line__txt__1">
                             Tarte au citron meringuée
