--- a/Pages/page4.html
+++ b/Pages/page4.html
@@ -40,7 +40,7 @@
             <article class="menu">
                 <h2>ENTRÉES</h2>
                 <div class="menu__underline"></div>
-                <div class="menu__line">
+                <div class="menu__line menu__line--1">
                     <div class="menu__line__txt">
                         <div class="menu__line__txt__1">
                             Tartare de thon
@@ -56,7 +56,7 @@
                         <i class="fa-sharp fa-solid fa-circle-check fa-lg"></i>
                     </div>
                 </div>
-                <div class="menu__line">
+                <div class="menu__line menu__line--2">
                     <div class="menu__line__txt">
                         <div class="menu__line__txt__1">
                             Bouchée de homard croustillant
@@ -72,7 +72,7 @@
                         <i class="fa-sharp fa-solid fa-circle-check fa-lg"></i>
                     </div>
                 </div>
-                <div class="menu__line">
+                <div class="menu__line menu__line--3">
                     <div class="menu__line__txt">
                         <div class="menu__line__txt__1">
                             Velouté de cèpes
@@ -92,7 +92,7 @@
             <article class="menu">
                 <h2>PLATS</h2>
                 <div class="menu__underline"></div>
-                <div class="menu__line">
+                <div class="menu__line menu__line--4">
                     <div class="menu__line__txt">
                         <div class="menu__line__txt__1">
                             Poulet rôti aux herbes de provence
@@ -108,7 +108,7 @@
                         <i class="fa-sharp fa-solid fa-circle-check fa-lg"></i>
                     </div>
                 </div>
-                <div class="menu__line">
+                <div class="menu__line menu__line--5">
                     <div class="menu__line__txt">
                         <div class="menu__line__txt__1">
                             Langouste rôtie
@@ -124,7 +124,7 @@
                         <i class="fa-sharp fa-solid fa-circle-check fa-lg"></i>
                     </div>
                 </div>
-                <div class="menu__line">
+                <div class="menu__line menu__line--6">
                     <div class="menu__line__txt">
                         <div class="menu__line__txt__1">
                             Côte de boeuf angus
@@ -144,7 +144,7 @@
             <article class="menu">
                 <h2>DESSERTS</h2>
                 <div class="menu__underline"></div>
-                <div class="menu__line">
+                <div class="menu__line menu__line--7">
                     <div class="menu__line__txt">
                         <div class="menu__line__txt__1">
                             Farandole de desserts
@@ -160,7 +160,7 @@
                         <i class="fa-sharp fa-solid fa-circle-check fa-lg"></i>
                     </div>
                 </div>
-                <div class="menu__line">
+                <div class="menu__line menu__line--8">
                     <div class="menu__line__txt">
                         <div class="menu__line__txt__1">
                             Crème brulée
@@ -176,7 +176,7 @@
                         <i class="fa-sharp fa-solid fa-circle-check fa-lg"></i>
                     </div>
                 </div>
-                <div class="menu__line">
+                <div class="menu__line menu__line--9">
                     <div class="menu__line__txt">
                         <div class="menu__line__txt__1">
                             Tiramisu
