--- a/Pages/page3.html
+++ b/Pages/page3.html
@@ -40,7 +40,7 @@
             <article class="menu">
                 <h2>ENTRÉES</h2>
                 <div class="menu__underline"></div>
-                <div class="menu__line">
+                <div class="menu__line menu__line--1">
                     <div class="menu__line__txt">
                         <div class="menu__line__txt__1">
                             Fricassée d'escagot
@@ -56,7 +56,7 @@
                         <i class="fa-sharp fa-solid fa-circle-check fa-lg"></i>
                     </div>
                 </div>
-                <div class="menu__line">
+                <div class="menu__line menu__line--2">
                     <div class="menu__line__txt">
                         <div class="menu__line__txt__1">
                             Foie gras de canard mi-cuit
@@ -72,7 +72,7 @@
                         <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
                     </div>
                 </div>
-                <div class="menu__line">
+                <div class="menu__line menu__line--3">
                     <div class="menu__line__txt">
                         <div class="menu__line__txt__1">
                             Oeuf au plat
@@ -92,7 +92,7 @@
             <article class="menu">
                 <h2>PLATS</h2>
                 <div class="menu__underline"></div>
-                <div class="menu__line">
+                <div class="menu__line menu__line--4">
                     <div class="menu__line__txt">
                         <div class="menu__line__txt__1">
                             Filet de boeuf aux herbes
@@ -108,7 +108,7 @@
                         <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
                     </div>
                 </div>
-                <div class="menu__line">
+                <div class="menu__line menu__line--5">
                     <div class="menu__line__txt">
                         <div class="menu__line__txt__1">
                             Parmentier de queue de boeuf
@@ -124,7 +124,7 @@
                         <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
                     </div>
                 </div>
-                <div class="menu__line">
+                <div class="menu__line menu__line--6">
                     <div class="menu__line__txt">
                         <div class="menu__line__txt__1">
                             Filet de Turbot
@@ -144,7 +144,7 @@
             <article class="menu">
                 <h2>DESSERTS</h2>
                 <div class="menu__underline"></div>
-                <div class="menu__line">
+                <div class="menu__line menu__line--7">
                     <div class="menu__line__txt">
                         <div class="menu__line__txt__1">
                             Paris-Brest
@@ -160,7 +160,7 @@
                         <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
                     </div>
                 </div>
-                <div class="menu__line">
+                <div class="menu__line menu__line--8">
                     <div class="menu__line__txt">
                         <div class="menu__line__txt__1">
                             Macaron au chocolat d'exception
@@ -176,7 +176,7 @@
                         <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
                     </div>
                 </div>
-                <div class="menu__line">
+                <div class="menu__line menu__line--9">
                     <div class="menu__line__txt">
                         <div class="menu__line__txt__1">
                             Mousse au chocolat
